[package]
name = "moogle"
version = "0.0.9"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "a data store for relational code"
readme = "README.md"
homepage = "https://github.com/nyeogmi/moogle"
repository = "https://github.com/nyeogmi/moogle"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "database"]
categories = ["database-implementations", "data-structures", "game-development", "memory-management"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]