[package]
name = "moogle"
version = "0.4.2"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "data structures for relational code"
readme = "README.md"
homepage = "https://github.com/nyeogmi/moogle"
repository = "https://github.com/nyeogmi/moogle"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "database"]
categories = ["database-implementations", "data-structures", "game-development", "memory-management"]
edition = "2018"

[features]
serde1 = ["serde"]  # this is real weird!!! but it's what `rand` uses

[dependencies]
serde = {version = "1.0", optional = true, features=["derive"]}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1.0" # for demoing serde support

[[example]]
name = "example"
required-features = ["serde1"]